# internal/service/GetUserIncomingFriendsRequestsCount.go
@@ -1,6 +1,8 @@
 package service
 
 import (
+	"backend/internal/errorResponse"
+	"backend/internal/errorResponse/codes"
 	"backend/internal/middlewares"
 	"fmt"
 	"net/http"
@@ -18,17 +20,19 @@ type IncomingFriendsRequestsCountResponse struct {
 // @Router /api/user/friends/requests/incoming/count [get]
 // @Security ApiKeyAuth
 // @Produce json
+// @Failure 401 {object} Response
+// @Failure 500 {object} Response
 // @Success 200 {object} IncomingFriendsRequestsCountResponse
 func (s *Service) GetUserIncomingFriendsRequestsCount(c *gin.Context) {
-	authData := middlewares.GetInitDataFromContext(c)
-	if authData == nil {
-		c.AbortWithStatus(http.StatusUnauthorized)
+	authData, authorized := middlewares.GetInitDataFromContext(c)
+	if !authorized {
+		errorResponse.Send(c, http.StatusUnauthorized, codes.UnauthorizedErrCode, nil)
 		return
 	}
 
 	count, err := s.db.GetIncomingFriendsRequestsCount(c, authData.User.ID)
 	if err != nil {
-		c.AbortWithError(http.StatusInternalServerError, fmt.Errorf("failed to get incoming friend requests count: %w", err))
+		errorResponse.Send(c, http.StatusInternalServerError, codes.InternalErrCode, fmt.Errorf("failed to get incoming friend requests count: %w", err))
 		return
 	}
 	c.JSON(http.StatusOK, IncomingFriendsRequestsCountResponse{count})
