# internal/service/GetUserOutcomingFriendsRequests.go
@@ -1,6 +1,8 @@
 package service
 
 import (
+	"backend/internal/errorResponse"
+	"backend/internal/errorResponse/codes"
 	"backend/internal/middlewares"
 	"fmt"
 	"net/http"
@@ -14,17 +16,19 @@ import (
 // @Router /api/user/friends/requests/outcoming [get]
 // @Security ApiKeyAuth
 // @Produce json
+// @Failure 401 {object} Response
+// @Failure 500 {object} Response
 // @Success 200 {array} Friend
 func (s *Service) GetUserOutcomingFriendsRequests(c *gin.Context) {
-	authData := middlewares.GetInitDataFromContext(c)
-	if authData == nil {
-		c.AbortWithStatus(http.StatusUnauthorized)
+	authData, authorized := middlewares.GetInitDataFromContext(c)
+	if !authorized {
+		errorResponse.Send(c, http.StatusUnauthorized, codes.UnauthorizedErrCode, nil)
 		return
 	}
 
 	requests, err := s.db.GetOutcomingFriendsRequests(c, authData.User.ID)
 	if err != nil {
-		c.AbortWithError(http.StatusInternalServerError, fmt.Errorf("cannot get outcoming friend requests: %w", err))
+		errorResponse.Send(c, http.StatusInternalServerError, codes.InternalErrCode, fmt.Errorf("cannot get outcoming friend requests: %w", err))
 		return
 	}
 	c.JSON(http.StatusOK, mapStoreUsersToFriends(requests))
